--- a/LABY programowanie I.csproj
+++ b/LABY programowanie I.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Vehicles\Airboat.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vehicles\Vehicle.cs" />
+    <Compile Include="Vehicles\OfficeChair.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
