--- a/LABY programowanie I.csproj
+++ b/LABY programowanie I.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestException.cs" />
     <Compile Include="Vehicles\Airboat.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
